Alteração e documentação
Alteração das rotas de listagem com filtros e documentação
